// =====================================================================
//  NGHIEP VU D - DE NGHI CAP PHAT VA THU HOI TAI SAN
//  So do rut gon cho luong advisor_requests.
//  Cac bang duoc giu van dung field/khoa theo docs/database.dbml.
// =====================================================================

// Important enum values:
// users.is_active: 1 ACTIVE, 0 IN_ACTIVE
// advisor_requests.type: 1 allocation, 2 recall, 4 other
// advisor_requests.status: 0 pending, 1 approved, 2 rejected

Table users {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  phone_number varchar(255)
  avatar_url varchar(255)
  address varchar(255)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  failed_login_attempts int [not null, default: 0]
  last_failed_login_at datetime
  is_active boolean [default: 1]
  role_id int
  class_id int
  major_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table classes {
  id int [pk, increment]
  major_id int [not null]
  name varchar(255) [not null]
  code varchar(255) [not null, unique]
  description text
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table students {
  id int [pk, increment]
  class_id int [not null]
  student_code varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  phone_number varchar(255)
  is_active boolean [default: true]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table assets {
  id int [pk, increment]
  name varchar(255) [not null]
  code varchar(255) [unique]
  description varchar(255)
  image_url varchar(255)
  category_id int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouses {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [unique]
  address_id bigint
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table advisor_requests {
  id int [pk, increment]
  advisor_id int [not null]
  class_id int
  student_id int
  asset_id int
  quantity int
  type int [not null]
  status int [not null, default: 0]
  note text
  response_note text
  processed_by_user_id int
  allocation_transaction_code varchar(255) [note: 'Business relation to asset_transactions.code, no physical FK in migration']
  warehouse_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

// Relationships shown in this diagram.
Ref: users.class_id > classes.id [delete: set null]
Ref: users.created_by_user_id > users.id [delete: set null]
Ref: users.modified_by_user_id > users.id [delete: set null]
Ref: users.deleted_by_user_id > users.id [delete: set null]
Ref: students.class_id > classes.id [delete: cascade]
Ref: assets.created_by_user_id > users.id [delete: set null]
Ref: assets.modified_by_user_id > users.id [delete: set null]
Ref: assets.deleted_by_user_id > users.id [delete: set null]
Ref: warehouses.created_by_user_id > users.id [delete: set null]
Ref: warehouses.modified_by_user_id > users.id [delete: set null]
Ref: warehouses.deleted_by_user_id > users.id [delete: set null]
Ref: advisor_requests.advisor_id > users.id [delete: cascade]
Ref: advisor_requests.class_id > classes.id [delete: set null]
Ref: advisor_requests.student_id > students.id [delete: set null]
Ref: advisor_requests.asset_id > assets.id [delete: set null]
Ref: advisor_requests.processed_by_user_id > users.id [delete: set null]
Ref: advisor_requests.warehouse_id > warehouses.id [delete: set null]

// majors khong ve trong so do nay de giu gon; classes.major_id van la field that trong DB.
// advisor_requests.allocation_transaction_code -> asset_transactions.code la quan he nghiep vu, chua co FK vat ly trong migration.
// users.role_id va users.major_id van la field that trong DB; roles/majors khong ve o so do D de giu gon.
// assets.category_id va warehouses.address_id van la field that trong DB; categories/address khong ve o so do D.

